--- a/nextflow.config
+++ b/nextflow.config
@@ -5,7 +5,7 @@ google {
 }
 
 k8s {
- // storageClaimName = 'nextflow-filestore-claim'
+ storageClaimName = 'nextflow-filestore-claim'
  storageMountPath = '/nextflow'
  storageSubPath = '/nextflow/data'
  serviceAccount = 'system:serviceaccount:nextflow:default'
