--- a/nextflow.config
+++ b/nextflow.config
@@ -9,6 +9,6 @@ k8s {
  storageMountPath = '/nextflow'
  storageSubPath = '/nextflow/data'
  serviceAccount = 'system:serviceaccount:nextflow:default'
- namespace      = 'default'
+ namespace      = 'nextflow'
  context = 'gke_ashires-pso-experimental_europe-west2-a_nextflow-cluster'
 }
