--- a/nextflow.config
+++ b/nextflow.config
@@ -1,3 +1,8 @@
+process {
+ executor = 'google-lifesciences'
+ container = 'eu.gcr.io/ashires-pso-experimental/nextflow-step-container:latest'
+}
+
 google {
  project = 'ashires-pso-experimental'
  region = 'europe-west2'
