updating demo command

--- a/nextflow.config
+++ b/nextflow.config
@@ -11,8 +11,8 @@ google {
 
 k8s {
  storageClaimName = 'nextflow-filestore-claim'
- storageMountPath = '/nextflow'
- storageSubPath = '/nextflow/data'
+ storageMountPath = '/mnt/nextflow'
+ storageSubPath = '/mnt/nextflow/data'
  serviceAccount = 'system:serviceaccount:nextflow:default'
  namespace      = 'nextflow'
  context = 'gke_ashires-pso-experimental_europe-west2-a_nextflow-cluster'
