--- a/nextflow.config
+++ b/nextflow.config
@@ -1,8 +1,3 @@
-process {
- executor = 'google-lifesciences'
- container = 'eu.gcr.io/ashires-pso-experimental/nextflow-step-container:latest'
-}
-
 google {
  project = 'ashires-pso-experimental'
  region = 'europe-west2'
@@ -10,10 +5,9 @@ google {
 }
 
 k8s {
- storageClaimName = 'nextflow-filestore-claim'
- storageMountPath = '/mnt/nextflow'
- storageSubPath = '/mnt/nextflow/data'
- serviceAccount = 'system:serviceaccount:nextflow:default'
- namespace      = 'nextflow'
- context = 'gke_ashires-pso-experimental_europe-west2-a_nextflow-cluster'
-}
+       debug.yaml = true
+       storageClaimName = 'nextflow-filestore-claim'
+       storageMountPath = '/nextflow'
+       namespace = 'default'
+       serviceAccount = 'system:serviceaccount:nextflow:default'
+    }
