--- a/nextflow.config
+++ b/nextflow.config
@@ -1,3 +1,7 @@
+plugins {
+ id 'nf-google'
+}
+
 google {
  project = 'ashires-pso-experimental'
  region = 'europe-west2'
@@ -5,9 +9,9 @@ google {
 }
 
 k8s {
-       debug.yaml = true
-       storageClaimName = 'nextflow-filestore-claim'
-       storageMountPath = '/nextflow'
-       namespace = 'default'
-       serviceAccount = 'system:serviceaccount:nextflow:default'
-    }
+     debug.yaml = true
+     storageClaimName = 'nextflow-filestore-claim'
+     storageMountPath = '/nextflow'
+     namespace = 'default'
+     serviceAccount = 'system:serviceaccount:nextflow:default'
+}
