--- a/nextflow.config
+++ b/nextflow.config
@@ -2,6 +2,8 @@ plugins {
  id 'nf-google'
 }
 
+manifest.defaultBranch = 'main'
+
 google {
  project = 'ashires-pso-experimental'
  region = 'europe-west2'
