--- a/nextflow.config
+++ b/nextflow.config
@@ -12,8 +12,8 @@ google {
 
 k8s {
      debug.yaml = true
-     storageClaimName = 'nextflow-filestore-claim'
-     storageMountPath = '/nextflow'
+     storageClaimName = 'nextflow-filestore-default-claim'
+     storageMountPath = '/mnt/nextflow/default/'
      namespace = 'default'
-     serviceAccount = 'system:serviceaccount:nextflow:default'
+     serviceAccount = 'default'
 }
